# QWAS

./: .gitignore  CMakeLists.txt  README.md
checkpoints/: stability_assist_train_best.pt
doc/: stability_assist.md  stability_assist_baseline_v1.json  stability_assist_evaluation.json
include/: drone.h  game.h  qwas_app.h  stability_assist.h
models/: stability_assist.qwasmlp
src/: drone.cpp  game.cpp  main.cpp  qwas_app.cpp  stability_assist.cpp
tests/: stability_assist_test.cpp  test_stability_assist.py
tests/data/: physics_parity.txt  release_parity.txt  stability_assist_parity.txt
tools/: bake_stability_assist_weights.py  evaluate_stability_assist.py  export_stability_assist.py  generate_stability_assist_parity.py  requirements-train.txt  train_stability_assist.py
tools/stability_assist/: __init__.py  environment.py  evaluation.py  model.py  spec.py  weights.py
